--- a/.github/workflows/add_coins.yml
+++ b/.github/workflows/add_coins.yml
@@ -20,7 +20,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   bot:
-    name: get_my5B
+    name: add_coins
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: CONFIG
