--- a/.github/workflows/daily_task.yml
+++ b/.github/workflows/daily_task.yml
@@ -5,13 +5,14 @@ name: daily_task
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  schedule:
+  #push:
+    #branches: [ main ]
+  #pull_request:
+    #branches: [ main ]
+    
+  #schedule:
   # 定时任务
-    - cron: '0 11 * * *'
+    #- cron: '0 11 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
